[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/SinglePass.gd" type="Script" id=1]
[ext_resource path="res://Shaders/DivergenceShaderMaterial.tres" type="Material" id=2]
[ext_resource path="res://Shaders/SinglePassShader.tres" type="Shader" id=3]
[ext_resource path="res://Scenes/MouseControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/baseTexture.png" type="Texture" id=5]
[ext_resource path="res://Shaders/ShowNegativeColorNoZShaderMaterial.tres" type="Material" id=6]
[ext_resource path="res://Shaders/SinglePassPressureShader.tres" type="Shader" id=8]
[ext_resource path="res://Shaders/AdvectPaintShader.tres" type="Shader" id=9]
[ext_resource path="res://Shaders/CurlShader.tres" type="Shader" id=10]
[ext_resource path="res://Shaders/SinglePassLaplacianShader.tres" type="Shader" id=11]
[ext_resource path="res://Shaders/SinglePassPressureForceShader.tres" type="Shader" id=12]
[ext_resource path="res://Shaders/VorticityShader.tres" type="Shader" id=13]
[ext_resource path="res://Scenes/UITheme.tres" type="Theme" id=14]

[sub_resource type="ShaderMaterial" id=55]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/vorticityScale = 5.0
shader_param/laplacianScale = 4.0
shader_param/pressureScale = 2.0
shader_param/pressureMin = 0.5
shader_param/pressureMax = 3.0
shader_param/deltaTime = 0.05
shader_param/brushScale = 0.1
shader_param/externalForceVector = null
shader_param/externalForceUV = null
shader_param/externalForceOn = null
shader_param/borderOn = true

[sub_resource type="ViewportTexture" id=67]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ViewportTexture" id=58]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ShaderMaterial" id=63]
shader = ExtResource( 8 )
shader_param/pressureScale = 0.5

[sub_resource type="ShaderMaterial" id=60]
shader = ExtResource( 12 )
shader_param/pressureScale = 0.5

[sub_resource type="ShaderMaterial" id=61]
shader = ExtResource( 10 )

[sub_resource type="ShaderMaterial" id=62]
shader = ExtResource( 11 )
shader_param/laplacianScale = 0.5

[sub_resource type="ShaderMaterial" id=64]
shader = ExtResource( 13 )
shader_param/vorticityScale = 5.0

[sub_resource type="ViewportTexture" id=57]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ShaderMaterial" id=65]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/deltaTime = 0.05
shader_param/brushColor = Color( 0, 0, 0, 0 )
shader_param/brushCenterUV = null
shader_param/brushScale = 0.1
shader_param/brushOn = false
shader_param/velocity = SubResource( 57 )

[sub_resource type="ViewportTexture" id=66]
viewport_path = NodePath("DyeViewport")

[sub_resource type="ViewportTexture" id=36]
viewport_path = NodePath("VelocityViewport")

[sub_resource type="ViewportTexture" id=35]
viewport_path = NodePath("DyeViewport")

[node name="SinglePass" type="Node"]
script = ExtResource( 1 )

[node name="VelocityViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityViewport"]
material = SubResource( 55 )
centered = false

[node name="VelocityBackBufferViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VelocityBackBufferViewport"]
texture = SubResource( 67 )
centered = false

[node name="DivergenceViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="DivergenceViewport"]
material = ExtResource( 2 )
texture = SubResource( 58 )
centered = false

[node name="PressureViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="PressureViewport"]
material = SubResource( 63 )
texture = SubResource( 58 )
centered = false

[node name="PressureForceViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="PressureForceViewport"]
material = SubResource( 60 )
texture = SubResource( 58 )
centered = false

[node name="CurlViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="CurlViewport"]
material = SubResource( 61 )
texture = SubResource( 58 )
centered = false

[node name="LaplacianViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="LaplacianViewport"]
material = SubResource( 62 )
texture = SubResource( 58 )
centered = false

[node name="VorticityViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Sprite" type="Sprite" parent="VorticityViewport"]
material = SubResource( 64 )
texture = SubResource( 58 )
centered = false

[node name="DyeViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
transparent_bg = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="DyeViewport"]
material = SubResource( 65 )
centered = false

[node name="Icon" type="Sprite" parent="DyeViewport"]
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )
centered = false

[node name="BackBufferViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="BackBufferViewport"]
texture = SubResource( 66 )
centered = false

[node name="VelocitySprite" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 288, 288 )
texture = SubResource( 36 )

[node name="FinalViewportSprite" type="Sprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 928, 288 )
texture = SubResource( 35 )

[node name="UIControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )

[node name="MouseVelocityControl" parent="UIControl" instance=ExtResource( 4 )]
margin_left = 32.0
margin_top = 32.0
margin_right = -736.0
margin_bottom = -176.0

[node name="MouseDyeControl" parent="UIControl" instance=ExtResource( 4 )]
margin_left = 672.0
margin_top = 32.0
margin_right = -96.0
margin_bottom = -176.0

[node name="RefreshVelocityButton" type="Button" parent="UIControl"]
margin_left = 224.0
margin_top = 560.0
margin_right = 352.0
margin_bottom = 592.0
text = "Refresh Velocity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshIconButton" type="Button" parent="UIControl"]
margin_left = 864.0
margin_top = 600.0
margin_right = 992.0
margin_bottom = 632.0
text = "Refresh Icon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshClearButton" type="Button" parent="UIControl"]
margin_left = 864.0
margin_top = 640.0
margin_right = 992.0
margin_bottom = 672.0
text = "Refresh Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressureScaleSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 296.0
margin_top = 600.0
margin_right = 382.0
margin_bottom = 636.0
max_value = 10.0
step = 0.05
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaplacianSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 508.0
margin_top = 600.0
margin_right = 594.0
margin_bottom = 636.0
max_value = 8.0
step = 0.01
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VorticitySpinBox" type="SpinBox" parent="UIControl"]
margin_left = 508.0
margin_top = 640.0
margin_right = 594.0
margin_bottom = 676.0
max_value = 16.0
step = 0.1
value = 5.0

[node name="BordersOptionButton" type="CheckBox" parent="UIControl"]
margin_left = 504.0
margin_top = 680.0
margin_right = 557.0
margin_bottom = 714.0
pressed = true
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="UIControl"]
margin_left = 408.0
margin_top = 640.0
margin_right = 496.0
margin_bottom = 672.0
text = "Vorticity"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="UIControl"]
margin_left = 408.0
margin_top = 600.0
margin_right = 496.0
margin_bottom = 632.0
text = "Laplacian"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="UIControl"]
margin_left = 768.0
margin_top = 680.0
margin_right = 856.0
margin_bottom = 712.0
text = "Resolution"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="UIControl"]
margin_left = 408.0
margin_top = 680.0
margin_right = 496.0
margin_bottom = 712.0
text = "Borders"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UIControl"]
margin_left = 168.0
margin_top = 600.0
margin_right = 291.0
margin_bottom = 632.0
text = "Pressure Scale"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressureMinSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 296.0
margin_top = 640.0
margin_right = 382.0
margin_bottom = 676.0
min_value = -10.0
max_value = 10.0
step = 0.05
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="UIControl"]
margin_left = 168.0
margin_top = 640.0
margin_right = 279.0
margin_bottom = 672.0
text = "Pressure Min"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressureMaxSpinBox" type="SpinBox" parent="UIControl"]
margin_left = 296.0
margin_top = 680.0
margin_right = 382.0
margin_bottom = 716.0
min_value = -10.0
max_value = 10.0
step = 0.05
value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="UIControl"]
margin_left = 168.0
margin_top = 680.0
margin_right = 282.0
margin_bottom = 712.0
text = "Pressure Max"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="UIControl"]
margin_left = 224.0
margin_top = 8.0
margin_right = 316.0
margin_bottom = 22.0
text = "Vector Field"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="UIControl"]
margin_left = 872.0
margin_top = 8.0
margin_right = 984.0
margin_bottom = 22.0
text = "Result"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalViewButton" type="OptionButton" parent="UIControl"]
margin_left = 864.0
margin_top = 560.0
margin_right = 992.0
margin_bottom = 592.0
text = "Dye"
align = 1
items = [ "Dye", null, false, 1, false, "Divergence", null, false, 0, false, "Pressure", null, false, 2, null, "Pressure Force", null, false, 3, null, "Laplacian", null, false, 4, null, "Curl", null, false, 5, null, "Vorticity", null, false, 6, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionButton" type="OptionButton" parent="UIControl"]
margin_left = 864.0
margin_top = 680.0
margin_right = 992.0
margin_bottom = 712.0
text = "256x256"
align = 1
items = [ "64x64", null, false, 1, false, "128x128", null, false, 0, false, "256x256", null, false, 2, null, "512x512", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkBrushCheckbox" type="CheckBox" parent="UIControl"]
margin_left = 576.0
margin_top = 560.0
margin_right = 640.0
margin_bottom = 592.0
pressed = true
text = "Link"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushSizeHSlider" type="HSlider" parent="UIControl"]
margin_left = 16.0
margin_top = 680.0
margin_right = 144.0
margin_bottom = 712.0
min_value = 0.005
max_value = 0.4
step = 0.005
value = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="UIControl"]
margin_left = 16.0
margin_top = 600.0
margin_right = 64.0
margin_bottom = 632.0
color = Color( 0.34902, 1, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushTypeButton" type="OptionButton" parent="UIControl"]
margin_left = 16.0
margin_top = 640.0
margin_right = 144.0
margin_bottom = 672.0
text = "Hard"
align = 1
items = [ "Softest", null, false, 1, false, "Soft", null, false, 0, false, "Hard", null, false, 2, null, "Hardest", null, false, 3, null, "Bristles", null, false, 4, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="UIControl"]
margin_left = 1144.0
margin_top = 640.0
margin_right = 1272.0
margin_bottom = 672.0
text = "Change Scene"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneButton" type="OptionButton" parent="UIControl"]
margin_left = 1064.0
margin_top = 680.0
margin_right = 1272.0
margin_bottom = 712.0
text = "Single-pass Demo"
align = 1
items = [ "Multi-pass Simple", null, false, 1, false, "Multi-pass Demo", null, false, 0, false, "Single-pass Demo", null, false, 2, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoColorCheckBox" type="CheckBox" parent="UIControl"]
margin_left = 72.0
margin_top = 600.0
margin_right = 139.0
margin_bottom = 634.0
pressed = true
text = "Auto"

[connection signal="force_applied" from="UIControl/MouseVelocityControl" to="." method="_on_MouseVelocityControl_force_applied"]
[connection signal="force_released" from="UIControl/MouseVelocityControl" to="." method="_on_MouseVelocityControl_force_released"]
[connection signal="force_applied" from="UIControl/MouseDyeControl" to="." method="_on_MouseDyeControl_force_applied"]
[connection signal="force_released" from="UIControl/MouseDyeControl" to="." method="_on_MouseDyeControl_force_released"]
[connection signal="pressed" from="UIControl/RefreshVelocityButton" to="." method="_on_RefreshVelocityButton_pressed"]
[connection signal="pressed" from="UIControl/RefreshIconButton" to="." method="_on_RefreshIconButton_pressed"]
[connection signal="pressed" from="UIControl/RefreshClearButton" to="." method="_on_RefreshClearButton_pressed"]
[connection signal="value_changed" from="UIControl/PressureScaleSpinBox" to="." method="_on_PressureScaleSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/LaplacianSpinBox" to="." method="_on_LaplacianSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/VorticitySpinBox" to="." method="_on_VorticitySpinBox_value_changed"]
[connection signal="toggled" from="UIControl/BordersOptionButton" to="." method="_on_BordersOptionButton_toggled"]
[connection signal="value_changed" from="UIControl/PressureMinSpinBox" to="." method="_on_PressureMinSpinBox_value_changed"]
[connection signal="value_changed" from="UIControl/PressureMaxSpinBox" to="." method="_on_PressureMaxSpinBox_value_changed"]
[connection signal="item_selected" from="UIControl/FinalViewButton" to="." method="_on_FinalViewButton_item_selected"]
[connection signal="item_selected" from="UIControl/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="toggled" from="UIControl/LinkBrushCheckbox" to="." method="_on_LinkBrushCheckbox_toggled"]
[connection signal="value_changed" from="UIControl/BrushSizeHSlider" to="." method="_on_BrushSizeHSlider_value_changed"]
[connection signal="color_changed" from="UIControl/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="item_selected" from="UIControl/BrushTypeButton" to="." method="_on_BrushTypeButton_item_selected"]
[connection signal="item_selected" from="UIControl/SceneButton" to="." method="_on_SceneButton_item_selected"]
[connection signal="toggled" from="UIControl/AutoColorCheckBox" to="." method="_on_AutoColorCheckBox_toggled"]
